--- a/qa/suites/fs/multifs/tasks/multifs-auth.yaml
+++ b/qa/suites/fs/multifs/tasks/multifs-auth.yaml
@@ -2,4 +2,4 @@ tasks:
   - cephfs_test_runner:
       fail_on_skip: false
       modules:
-        - tasks.cephfs.test_multifs_auth
+        - tasks.cephfs.test_multifs_auth.TestMDSCaps.test_r_with_fsname_and_no_path_in_cap
