--- a/qa/suites/fs/functional/tasks/admin.yaml
+++ b/qa/suites/fs/functional/tasks/admin.yaml
@@ -13,5 +13,4 @@ tasks:
   - cephfs_test_runner:
       fail_on_skip: false
       modules:
-        - tasks.cephfs.test_admin
-        - tasks.cephfs.admin.test_fs_swap
+        - tasks.cephfs.test_admin.TestFsAuthorize.test_multifs_single_path_rootsquash
